--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
 
 <h1 id="matthew-kvalheim">Matthew Kvalheim</h1>
 
+<h2 id="assistant-professor-of-mathematics">Assistant Professor of Mathematics</h2>
+
+<h2 id="university-of-maryland-baltimore-county">University of Maryland, Baltimore County</h2>
 <hr />
 
 <p>Email: <a href="mailto:kvalheim@umbc.edu">kvalheim@umbc.edu</a></p>
 
 <p>My CV: <a href="assets/Kvalheim_CV.pdf">link</a></p>
 
-<hr />
-
-<p>I have accepted a position as Assistant Professor of Mathematics at the University of Maryland, Baltimore County starting Fall 2023. 
-My <a href="https://mdkvalheim.github.io/research/">research</a> interests include nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.</p>
+<p>My <a href="https://mdkvalheim.github.io/research/">research</a> interests include nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.</p>
 
 <hr />
 
