--- a/teaching/index.html
+++ b/teaching/index.html
@@ -36,7 +36,7 @@
 
   <title>
     
-      Home &middot; Welcome!
+      Research &middot; Home
     
   </title>
 
@@ -76,30 +76,19 @@
       <!-- Body -->
       <main class="content">
         <article class="page">
-   <p><img style="width: 20%" align="right" src="assets/images/hs-4-cropped.jpg" /></p>
-
-<h1 id="matthew-kvalheim">Matthew Kvalheim</h1>
-
-<h2 id="assistant-professor-of-mathematics">Assistant Professor of Mathematics</h2>
-
-<h2 id="university-of-maryland-baltimore-county">University of Maryland, Baltimore County</h2>
-<hr />
-
-<p><strong>Email:</strong> mylastname[at]umbc[dot]edu</p>
-
-<p><strong>Curriculum vitae:</strong> <a href="assets/Kvalheim_CV.pdf">link</a></p>
+   <h1 id="teaching">Teaching</h1>
 
 <hr />
 
-<p>My <strong><a href="https://mdkvalheim.github.io/research/">research</a></strong> and <strong><a href="https://mdkvalheim.github.io/research/">teaching</a></strong> pages contain information about my research and teaching.</p>
-
-<hr />
-
-<h2 id="some-recent-presentation-materials">Some recent presentation materials:</h2>
 <ul>
-  <li><a href="/assets/banff-2023.pdf">Slides</a> from a talk at the Banff workshop <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139">Geometry, Topology and Control System Design</a>. Topic: the feedback stabilizability and safety problems.</li>
-  <li><a href="/assets/cornell-2-21-2022.pdf">Slides</a> from a talk at the Cornell Probability Seminar. Topic: flux in small-noise dynamical systems.</li>
-  <li><a href="https://www.youtube.com/watch?v=DEQcCCea_rA&amp;t=3644s&amp;ab_channel=DIMACSCCICADA">Video</a> from a talk at the Rutgers TRIPODS/DATA-INSPIRE institute. Topic: Conley’s fundamental theorem for hybrid dynamical systems.</li>
+  <li>
+    <p><strong>Differential Equations (Math 316)</strong>.<br />
+  University of Michigan, Winter 2023</p>
+  </li>
+  <li>
+    <p><strong>Calculus I (Math 115)</strong>.<br />
+  University of Michigan, Fall 2022</p>
+  </li>
 </ul>
 
 
