--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 <h2 id="university-of-maryland-baltimore-county">University of Maryland, Baltimore County</h2>
 <hr />
 
-<p><strong>Email:</strong> mylastname[at]umbc[dot]edu</p>
+<p>Email: mylastname[at]umbc[dot]edu</p>
 
-<p><strong>Curriculum vitae:</strong> <a href="assets/Kvalheim_CV.pdf">link</a></p>
+<p>Curriculum vitae: <a href="assets/Kvalheim_CV.pdf">link</a></p>
 
 <hr />
 
-<p>My <strong><a href="https://mdkvalheim.github.io/research/">research</a></strong> and <strong><a href="https://mdkvalheim.github.io/research/">teaching</a></strong> pages contain information about my research and teaching.</p>
+<p>My <a href="https://mdkvalheim.github.io/research/">research</a> and <a href="https://mdkvalheim.github.io/research/">teaching</a> pages contain information about my research and teaching.</p>
 
 <hr />
 
