--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <hr />
 
-<p>My <a href="https://mdkvalheim.github.io/research/">research</a> and <a href="https://mdkvalheim.github.io/teaching/">teaching</a> pages contain information about my research and teaching.</p>
+<p>My <a href="https://mdkvalheim.github.io/research/">research</a> and <a href="https://mdkvalheim.github.io/teaching/">teaching</a> pages contain more information.</p>
 
 <hr />
 
