--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 
 <h2 id="some-recent-presentation-materials">Some recent presentation materials:</h2>
 <ul>
-  <li><a href="/assets/banff-2023.pdf">Slides</a> from a talk at the Banff workshop <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139">Geometry, Topology and Control System Design</a>. Topic: the feedback stabilizability and safety problems.</li>
-  <li><a href="/assets/cornell-2-21-2022.pdf">Slides</a> from a talk at the Cornell Probability Seminar. Topic: flux in small-noise dynamical systems.</li>
-  <li><a href="https://www.youtube.com/watch?v=DEQcCCea_rA&amp;t=3644s&amp;ab_channel=DIMACSCCICADA">Video</a> from a talk at the Rutgers TRIPODS/DATA-INSPIRE institute. Topic: Conley’s fundamental theorem for hybrid dynamical systems.</li>
+  <li><a href="/assets/banff-2023.pdf">Slides</a> from the Banff workshop <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139">Geometry, Topology and Control System Design</a>. Topic: the feedback stabilizability and safety problems.</li>
+  <li><a href="/assets/cornell-2-21-2022.pdf">Slides</a> from the Cornell Probability Seminar. Topic: flux in small-noise dynamical systems.</li>
+  <li><a href="https://www.youtube.com/watch?v=DEQcCCea_rA&amp;t=3644s&amp;ab_channel=DIMACSCCICADA">Video</a> from the Rutgers TRIPODS/DATA-INSPIRE institute. Topic: Conley’s fundamental theorem for hybrid dynamical systems.</li>
 </ul>
 
 
