--- a/teaching/index.html
+++ b/teaching/index.html
@@ -82,6 +82,10 @@
 
 <ul>
   <li>
+    <p><strong>Modern Algebra and Number Theory (Math 407)</strong>.<br />
+  UMBC, Fall 2023</p>
+  </li>
+  <li>
     <p><strong>Differential Equations (Math 316)</strong>.<br />
   University of Michigan, Winter 2023</p>
   </li>
