--- a/teaching/index.html
+++ b/teaching/index.html
@@ -82,7 +82,7 @@
 
 <ul>
   <li>
-    <p><strong>Modern Algebra and Number Theory (Math 407)</strong>.<br />
+    <p><strong>Introduction to Linear Algebra (Math 221)</strong>.<br />
   UMBC, Fall 2023</p>
   </li>
   <li>
