--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
 
 <p>Email: mylastname[at]umbc[dot]edu</p>
 
-<p>Curriculum vitae: <a href="assets/Kvalheim_CV.pdf">link</a></p>
+<p>Curriculum vitae: <a href="assets/Kvalheim_CV.pdf"><u>link</u></a></p>
 
 <hr />
 
-<p>My <a href="https://mdkvalheim.github.io/research/">research</a> and <a href="https://mdkvalheim.github.io/teaching/">teaching</a> pages contain more information.</p>
+<p>My <a href="https://mdkvalheim.github.io/research/"><u>research</u></a> and <a href="https://mdkvalheim.github.io/teaching/"><u>teaching</u></a> pages contain more information.</p>
 
 <hr />
 
 <h2 id="some-recent-presentation-materials">Some recent presentation materials:</h2>
 <ul>
-  <li><a href="/assets/banff-2023.pdf">Slides</a> from the Banff workshop <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139">Geometry, Topology and Control System Design</a>. Topic: the feedback stabilizability and safety problems.</li>
-  <li><a href="/assets/cornell-2-21-2022.pdf">Slides</a> from the Cornell Probability Seminar. Topic: flux in small-noise dynamical systems.</li>
-  <li><a href="https://www.youtube.com/watch?v=DEQcCCea_rA&amp;t=3644s&amp;ab_channel=DIMACSCCICADA">Video</a> from the Rutgers TRIPODS/DATA-INSPIRE institute. Topic: Conley’s fundamental theorem for hybrid dynamical systems.</li>
+  <li><a href="/assets/banff-2023.pdf"><u>Slides</u></a> from the Banff workshop <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139"><u>Geometry, Topology and Control System Design</u></a>. Topic: the feedback stabilizability and safety problems.</li>
+  <li><a href="/assets/cornell-2-21-2022.pdf"><u>Slides</u></a> from the Cornell Probability Seminar. Topic: flux in small-noise dynamical systems.</li>
+  <li><a href="https://www.youtube.com/watch?v=DEQcCCea_rA&amp;t=3644s&amp;ab_channel=DIMACSCCICADA"><u>Video</u></a> from the Rutgers TRIPODS/DATA-INSPIRE institute. Topic: Conley’s fundamental theorem for hybrid dynamical systems.</li>
 </ul>
 
 
