--- a/research/index.html
+++ b/research/index.html
@@ -90,57 +90,57 @@
   <li>
     <p><strong>A compositional approach to certifying the almost global asymptotic stability of cascade systems</strong>.<br />
   Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
-  IEEE Control Systems Letters, 7 (2023), pp. 1969-1974. (<a href="https://doi.org/10.1109/LCSYS.2023.3284338">article</a>, <a href="https://arxiv.org/abs/2303.15535">arxiv</a>)</p>
+  IEEE Control Systems Letters, 7 (2023), pp. 1969-1974. (<a href="https://doi.org/10.1109/LCSYS.2023.3284338"><u>article</u></a>, <a href="https://arxiv.org/abs/2303.15535"><u>arxiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
  Yuliy Baryshnikov and Matthew D. Kvalheim.<br />
- Communications in Mathematical Physics, 400.2 (2023), pp. 853–930. (<a href="https://doi.org/10.1007/s00220-022-04622-4">article</a>, <a href="https://arxiv.org/abs/2108.06431">arXiv</a>)</p>
+ Communications in Mathematical Physics, 400.2 (2023), pp. 853–930. (<a href="https://doi.org/10.1007/s00220-022-04622-4"><u>article</u></a>, <a href="https://arxiv.org/abs/2108.06431"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Obstructions to asymptotic stabilization</strong>.<br />
   Matthew D. Kvalheim.<br />
-  SIAM Journal on Control and Optimization, 61.2 (2023), pp. 536–542. (<a href="https://doi.org/10.1137/22M1500113">article</a>, <a href="https://arxiv.org/abs/2205.07840">arXiv</a>)</p>
+  SIAM Journal on Control and Optimization, 61.2 (2023), pp. 536–542. (<a href="https://doi.org/10.1137/22M1500113"><u>article</u></a>, <a href="https://arxiv.org/abs/2205.07840"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>A generalization of the Hopf degree theorem</strong>.<br />
   Matthew D. Kvalheim.<br />
-  Proceedings of the American Mathematical Society, 151.1 (2023), pp. 453–454. (<a href="https://doi.org/10.1090/proc/16218">article</a>, <a href="https://arxiv.org/abs/2203.10371">arXiv</a>)</p>
+  Proceedings of the American Mathematical Society, 151.1 (2023), pp. 453–454. (<a href="https://doi.org/10.1090/proc/16218"><u>article</u></a>, <a href="https://arxiv.org/abs/2203.10371"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Planning of obstacle-aided navigation for multi-legged robots using a sampling-based method over directed graphs</strong>.<br />
  Kaustav Chakraborty, Haodi Hu, Matthew D. Kvalheim, and Feifei Qian.<br />
- IEEE Robotics and Automation Letters, 7.4 (2022), pp. 8861-8868. (<a href="https://ieeexplore.ieee.org/document/9812503">article</a>)</p>
+ IEEE Robotics and Automation Letters, 7.4 (2022), pp. 8861-8868. (<a href="https://ieeexplore.ieee.org/document/9812503"><u>article</u></a>)</p>
   </li>
   <li>
     <p><strong>Necessary conditions for feedback stabilization and safety</strong>.<br />
  Matthew D. Kvalheim and Daniel E. Koditschek.<br />
- Journal of Geometric Mechanics, 14.4 (2022), pp. 659-693. (<a href="https://www.aimsciences.org/article/doi/10.3934/jgm.2022013">article</a>, <a href="https://arxiv.org/abs/2106.00215">arXiv</a>)</p>
+ Journal of Geometric Mechanics, 14.4 (2022), pp. 659-693. (<a href="https://www.aimsciences.org/article/doi/10.3934/jgm.2022013"><u>article</u></a>, <a href="https://arxiv.org/abs/2106.00215"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Existence and uniqueness of global Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.<br />
  Matthew D. Kvalheim and Shai Revzen.<br />
- Physica D, 425 (2021), pp. 132959. (<a href="https://www.sciencedirect.com/science/article/pii/S0167278921001160">article</a>, <a href="https://arxiv.org/abs/1911.11996">arXiv</a>)</p>
+ Physica D, 425 (2021), pp. 132959. (<a href="https://www.sciencedirect.com/science/article/pii/S0167278921001160"><u>article</u></a>, <a href="https://arxiv.org/abs/1911.11996"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Families of periodic orbits: closed 1-forms and global continuability</strong>.<br />
  Matthew D. Kvalheim and Anthony M. Bloch.<br />
- Journal of Differential Equations, 285 (2021), pp. 211-257. (<a href="https://www.sciencedirect.com/science/article/abs/pii/S0022039621001601">article</a>, <a href="https://arxiv.org/abs/1906.03528">arXiv</a>)</p>
+ Journal of Differential Equations, 285 (2021), pp. 211-257. (<a href="https://www.sciencedirect.com/science/article/abs/pii/S0022039621001601"><u>article</u></a>, <a href="https://arxiv.org/abs/1906.03528"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Conley’s fundamental theorem for a class of hybrid systems</strong>.<br />
  Matthew D. Kvalheim, Paul Gustafson, and Daniel E. Koditschek.<br />
- SIAM Journal on Applied Dynamical systems, 20.2 (2021), pp. 784-825. (<a href="https://epubs.siam.org/doi/abs/10.1137/20M1336576">article</a>, <a href="https://arxiv.org/abs/2005.03217">arXiv</a>)</p>
+ SIAM Journal on Applied Dynamical systems, 20.2 (2021), pp. 784-825. (<a href="https://epubs.siam.org/doi/abs/10.1137/20M1336576"><u>article</u></a>, <a href="https://arxiv.org/abs/2005.03217"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Gait modeling and optimization for the perturbed Stokes regime</strong>.<br />
 Matthew D. Kvalheim, Brian Bittner, and Shai Revzen.<br />
-Nonlinear Dynamics, 97.4 (2019), pp. 2249-2270. (<a href="https://link.springer.com/article/10.1007/s11071-019-05121-3">article</a>, <a href="https://arxiv.org/abs/1906.04384">arXiv</a>)</p>
+Nonlinear Dynamics, 97.4 (2019), pp. 2249-2270. (<a href="https://link.springer.com/article/10.1007/s11071-019-05121-3"><u>article</u></a>, <a href="https://arxiv.org/abs/1906.04384"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Global linearization and fiber bundle structure of invariant manifolds</strong>.<br />
 Jaap Eldering, Matthew D. Kvalheim, and Shai Revzen.<br />
-Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/article/10.1088/1361-6544/aaca8d">article</a>, <a href="https://arxiv.org/abs/1711.03646">arXiv</a>)</p>
+Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/article/10.1088/1361-6544/aaca8d"><u>article</u></a>, <a href="https://arxiv.org/abs/1711.03646"><u>arXiv</u></a>)</p>
   </li>
 </ul>
 
@@ -151,12 +151,12 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
     <p><strong>The role of symmetry in constructing geometric flat outputs for
   free-flying robotic systems</strong>.<br />
   Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
-  IEEE International Conference on Robotics and Automation, Accepted (2023). (<a href="https://arxiv.org/abs/2209.11869">arxiv</a>)</p>
+  IEEE International Conference on Robotics and Automation, Accepted (2023). (<a href="https://arxiv.org/abs/2209.11869"><u>arxiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Generic properties of Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.<br />
  Matthew D. Kvalheim, David Hong, and Shai Revzen.<br />
- IFAC-PapersOnline, 54.9 (2021), pp. 267-272. (<a href="https://www.sciencedirect.com/science/article/pii/S2405896321006443">article</a>, <a href="https://arxiv.org/abs/2010.04008">arXiv</a>)<br />
+ IFAC-PapersOnline, 54.9 (2021), pp. 267-272. (<a href="https://www.sciencedirect.com/science/article/pii/S2405896321006443"><u>article</u></a>, <a href="https://arxiv.org/abs/2010.04008"><u>arXiv</u></a>)<br />
 <!--* **Reverse-engineering invariant manifolds with asymptotic phase**,
 with Shai Revzen,
 (2016). ([arXiv][3])--></p>
@@ -164,7 +164,7 @@ with Shai Revzen,
   <li>
     <p><strong>Data-driven models of legged locomotion</strong>.<br />
 Shai Revzen and Matthew D. Kvalheim.<br />
-SPIE Defense + Security, International Society for Optics and Photonics (2015). (<a href="https://www.spiedigitallibrary.org/conference-proceedings-of-spie/9467/94671V/Data-driven-models-of-legged-locomotion/10.1117/12.2178007.short">article</a>)</p>
+SPIE Defense + Security, International Society for Optics and Photonics (2015). (<a href="https://www.spiedigitallibrary.org/conference-proceedings-of-spie/9467/94671V/Data-driven-models-of-legged-locomotion/10.1117/12.2178007.short"><u>article</u></a>)</p>
   </li>
 </ul>
 
@@ -174,12 +174,12 @@ SPIE Defense + Security, International Society for Optics and Photonics (2015). 
   <li>
     <p><strong>Templates and anchors</strong>.<br />
 Matthew D. Kvalheim and Shai Revzen.<br />
-Bioinspired legged locomotion, Ch. 3.2, Butterworth-Heinemann, Elsevier, Oxford (2017). (<a href="https://www.sciencedirect.com/book/9780128037669/bioinspired-legged-locomotion">link</a>)</p>
+Bioinspired legged locomotion, Ch. 3.2, Butterworth-Heinemann, Elsevier, Oxford (2017). (<a href="https://www.sciencedirect.com/book/9780128037669/bioinspired-legged-locomotion"><u>link</u></a>)</p>
   </li>
   <li>
     <p><strong>Locomotion as an oscillator</strong>.<br />
 Shai Revzen and Matthew D. Kvalheim.<br />
-Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford (2017). (<a href="https://www.sciencedirect.com/book/9780128037669/bioinspired-legged-locomotion">link</a>)</p>
+Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford (2017). (<a href="https://www.sciencedirect.com/book/9780128037669/bioinspired-legged-locomotion"><u>link</u></a>)</p>
   </li>
 </ul>
 
@@ -189,45 +189,45 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
   <li>
     <p><strong>Koopman embedding and super-linearization counterexamples with isolated equilibria</strong>.<br />
   Philip Arathoon and Matthew D. Kvalheim.<br />
-  (2023). (<a href="https://arxiv.org/abs/2306.15126">arxiv</a>)</p>
+  (2023). (<a href="https://arxiv.org/abs/2306.15126"><u>arxiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Linearizability of flows by embeddings</strong>.<br />
   Matthew D. Kvalheim and Philip Arathoon.<br />
-  (2023). (<a href="https://arxiv.org/abs/2305.18288">arxiv</a>)</p>
+  (2023). (<a href="https://arxiv.org/abs/2305.18288"><u>arxiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
   Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
-  (2022). (<a href="https://arxiv.org/abs/2203.04498">arxiv</a>)</p>
+  (2022). (<a href="https://arxiv.org/abs/2203.04498"><u>arxiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Phase response curves and the role of coordinates</strong>.<br />
  Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.<br />
- (2021). (<a href="https://arxiv.org/abs/2111.06511">arXiv</a>)</p>
+ (2021). (<a href="https://arxiv.org/abs/2111.06511"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>A pasting lemma for Lipschitz functions</strong>.<br />
  Matthew D. Kvalheim, Paul Gustafson, and Samuel A. Burden.<br />
- (2021). (<a href="https://arxiv.org/abs/2109.08209">arXiv</a>)</p>
+ (2021). (<a href="https://arxiv.org/abs/2109.08209"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Poincaré-Hopf theorem for hybrid systems</strong>.<br />
  Matthew D. Kvalheim.<br />
- (2021). (<a href="https://arxiv.org/abs/2108.07434">arXiv</a>)</p>
+ (2021). (<a href="https://arxiv.org/abs/2108.07434"><u>arXiv</u></a>)</p>
   </li>
 </ul>
 
 <hr />
 <h2 id="phd-thesis">PhD thesis:</h2>
 
-<p><strong>Aspects of invariant manifold theory and applications</strong>, 207 pages, December 2018. (<a href="https://deepblue.lib.umich.edu/handle/2027.42/147642">link</a>)</p>
+<p><strong>Aspects of invariant manifold theory and applications</strong>, 207 pages, December 2018. (<a href="https://deepblue.lib.umich.edu/handle/2027.42/147642"><u>link</u></a>)</p>
 
 <hr />
 <h2 id="selected-talks">Selected talks:</h2>
 <ul>
-  <li>M. Kvalheim. “<em>Asymptotic stabilizability.</em>” Invited talk, <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139">BIRS workshop Geometry, Topology and Control System Design</a> (2023). Banff, AB, Canada. (<a href="/assets/banff-2023.pdf">slides</a>)</li>
-  <li>M. Kvalheim. “<em>Existence and uniqueness of Koopman eigenfunctions near stable equilibria and limit cycles.</em>” Invited talk, International Symposium on Nonlinear Theory and Its Applications (NOLTA 2022). Online. (<a href="/assets/NOLTA2022.pdf">slides</a>)</li>
+  <li>M. Kvalheim. “<em>Asymptotic stabilizability.</em>” Invited talk, <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139"><u>BIRS workshop Geometry, Topology and Control System Design</u></a> (2023). Banff, AB, Canada. (<a href="/assets/banff-2023.pdf"><u>slides</u></a>)</li>
+  <li>M. Kvalheim. “<em>Existence and uniqueness of Koopman eigenfunctions near stable equilibria and limit cycles.</em>” Invited talk, International Symposium on Nonlinear Theory and Its Applications (NOLTA 2022). Online. (<a href="/assets/NOLTA2022.pdf"><u>slides</u></a>)</li>
   <li>M. Kvalheim. “<em>Negative resistance in small-noise dynamics via persistent homology.</em>” Invited SysConTalk, Indian Institute of Technology Bombay (2022). Online.</li>
   <li>M. Kvalheim. “<em>Large deviations, persistent homology, and Brownian conductors with negative resistance.</em>” Invited talk, Cornell University Probability Seminar (2022). Online.</li>
   <li>M. Kvalheim. “<em>When can hybrid systems operate safely?</em>” Invited talk, University of Michigan Control Seminar (2022). Online.</li>
