--- a/teaching/index.html
+++ b/teaching/index.html
@@ -83,7 +83,7 @@
 <ul>
   <li>
     <p><strong>Introduction to Linear Algebra (Math 221)</strong>.<br />
-  UMBC, Fall 2023</p>
+  UMBC, Fall 2023 (<a href="/assets/syllabus-fall-2023.html"><u>Syllabus</u></a>)</p>
   </li>
   <li>
     <p><strong>Differential Equations (Math 316)</strong>.<br />
