--- a/research/index.html
+++ b/research/index.html
@@ -187,6 +187,11 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
 <h2 id="papers-under-review-and-selected-other-preprints">Papers under review and selected other preprints:</h2>
 <ul>
   <li>
+    <p><strong>Why do autoencoders work?</strong>.<br />
+  Matthew D. Kvalheim and Eduardo D. Sontag.<br />
+  (2023). (<a href="https://arxiv.org/abs/2310.02250"><u>arxiv</u></a>)</p>
+  </li>
+  <li>
     <p><strong>Koopman embedding and super-linearization counterexamples with isolated equilibria</strong>.<br />
   Philip Arathoon and Matthew D. Kvalheim.<br />
   (2023). (<a href="https://arxiv.org/abs/2306.15126"><u>arxiv</u></a>)</p>
