--- a/assets/syllabus-fall-2023.html
+++ b/assets/syllabus-fall-2023.html
@@ -265,7 +265,7 @@ Sec 5.3 #6,13,20,21,24,25</b>
   <td>Reading day</td>
 </tr>
 <tr>
-  <td>Tues Dec 19</td> <td><font color=red>FINAL EXAM 1:00-3:00pm (Room TBD)</font></td>
+  <td>Tues Dec 19</td> <td><font color=red>FINAL EXAM 1:00-3:00pm (SHER 145)</font></td>
 </tr>
 </table>
 
