--- a/assets/syllabus-fall-2023.html
+++ b/assets/syllabus-fall-2023.html
@@ -159,7 +159,7 @@ You may find a copy of the summary of the Math 221 course I previously taught <a
 </tr>
 
 <tr>
-  <td>Thurs Oct 19</td> <td> 4.5-The Dimension of a Vector Space<br> 4.6-Rank</td>
+  <td>Thurs Oct 19</td> <td> 4.5-The Dimension of a Vector Space</td> <br>
   <td><font color=green>Due HW6
 <!--:<br></font>
   <b>Sec 2.1 #9,10,15,22,25,28;<br> Sec 2.2 #4,9,17,20,32;</b>-->
