--- a/research/index.html
+++ b/research/index.html
@@ -90,7 +90,7 @@
   <li>
     <p><strong>A compositional approach to certifying the almost global asymptotic stability of cascade systems</strong>.<br />
   Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
-  IEEE Control Systems Letters, 7 (2023), pp. 1969-1974. (<a href="https://doi.org/10.1109/LCSYS.2023.3284338"><u>article</u></a>, <a href="https://arxiv.org/abs/2303.15535"><u>arxiv</u></a>)</p>
+  IEEE Control Systems Letters, 7 (2023), pp. 1969-1974. (<a href="https://doi.org/10.1109/LCSYS.2023.3284338"><u>article</u></a>, <a href="https://arxiv.org/abs/2303.15535"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
@@ -151,7 +151,7 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
     <p><strong>The role of symmetry in constructing geometric flat outputs for
   free-flying robotic systems</strong>.<br />
   Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
-  IEEE International Conference on Robotics and Automation, Accepted (2023). (<a href="https://arxiv.org/abs/2209.11869"><u>arxiv</u></a>)</p>
+  IEEE International Conference on Robotics and Automation, Accepted (2023). (<a href="https://arxiv.org/abs/2209.11869"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Generic properties of Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.<br />
@@ -189,22 +189,22 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
   <li>
     <p><strong>Why do autoencoders work?</strong>.<br />
   Matthew D. Kvalheim and Eduardo D. Sontag.<br />
-  (2023). (<a href="https://arxiv.org/abs/2310.02250"><u>arxiv</u></a>)</p>
+  (2023). (<a href="https://arxiv.org/abs/2310.02250"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Koopman embedding and super-linearization counterexamples with isolated equilibria</strong>.<br />
   Philip Arathoon and Matthew D. Kvalheim.<br />
-  (2023). (<a href="https://arxiv.org/abs/2306.15126"><u>arxiv</u></a>)</p>
+  (2023). (<a href="https://arxiv.org/abs/2306.15126"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Linearizability of flows by embeddings</strong>.<br />
   Matthew D. Kvalheim and Philip Arathoon.<br />
-  (2023). (<a href="https://arxiv.org/abs/2305.18288"><u>arxiv</u></a>)</p>
+  (2023). (<a href="https://arxiv.org/abs/2305.18288"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
   Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
-  (2022). (<a href="https://arxiv.org/abs/2203.04498"><u>arxiv</u></a>)</p>
+  (2022). (<a href="https://arxiv.org/abs/2203.04498"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Phase response curves and the role of coordinates</strong>.<br />
