--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <h2 id="some-recent-presentation-materials">Some recent presentation materials:</h2>
 <ul>
-  <li><a href="/assets/kvalheim-grasp-sfi-2023-handout.pdf"><u>Handout</u></a> and <a href="/assets/kvalheim-grasp-sfi-2023-slides.pdf"><u>slides</u></a> from the <a href="https://www.grasp.upenn.edu/events/fall-2023-grasp-sfi-matthew-kvalheim/"><u>University of Pennsylvania GRASP SFI seminar</u></a>. Topic: discovering engineering (im)possibilities with geometry and topology.</li>
+  <li><a href="/assets/kvalheim-grasp-sfi-2023-handout.pdf"><u>Handout</u></a> and <a href="/assets/kvalheim-grasp-sfi-2023-slides.pdf"><u>slides</u></a> from the <a href="https://www.grasp.upenn.edu/events/fall-2023-grasp-sfi-matthew-kvalheim/"><u>University of Pennsylvania GRASP SFI Seminar</u></a>. Topic: discovering engineering (im)possibilities with geometry and topology.</li>
   <li><a href="/assets/banff-2023.pdf"><u>Slides</u></a> from the Banff workshop <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139"><u>Geometry, Topology and Control System Design</u></a>. Topic: the feedback stabilizability and safety problems.</li>
   <li><a href="/assets/cornell-2-21-2022.pdf"><u>Slides</u></a> from the Cornell Probability Seminar. Topic: flux in small-noise dynamical systems.</li>
   <li><a href="https://www.youtube.com/watch?v=DEQcCCea_rA&amp;t=3644s&amp;ab_channel=DIMACSCCICADA"><u>Video</u></a> from the Rutgers TRIPODS/DATA-INSPIRE institute. Topic: Conley’s fundamental theorem for hybrid dynamical systems.</li>
