--- a/assets/syllabus-fall-2023.html
+++ b/assets/syllabus-fall-2023.html
@@ -229,7 +229,7 @@ You may find a copy of the summary of the Math 221 course I previously taught <a
 </tr>
  <tr>
   <td>Thurs Nov 30</td>  
-  <td>6.6-Application of Least Squares</td>
+  <td>6.6-Machine Learning and Linear Models</td>
   <td><font color=green>Due HW10
 <!--:<br></font>
 <b>Sec 5.1 #1,6,16,21,25<br>
