--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <h2 id="some-recent-presentation-materials">Some recent presentation materials:</h2>
 <ul>
-  <li><a href="/assets/kvalheim-apl-slides.pdf"><u>Slides</u></a> and <a href="/assets/kvalheim-apl-handout.pdf"><u>handout</u></a> from a talk at the Johns Hopkins University Applied Physics Laboratory. Topic: discovering engineering (im)possibilities with geometry and topology.</li>
+  <li><a href="/assets/kvalheim-apl-handout.pdf"><u>Slides</u></a> from a talk at the Johns Hopkins University Applied Physics Laboratory. Topic: discovering engineering (im)possibilities with geometry and topology.</li>
   <li><a href="/assets/banff-2023.pdf"><u>Slides</u></a> from the Banff workshop <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139"><u>Geometry, Topology and Control System Design</u></a>. Topic: the feedback stabilizability and safety problems.</li>
   <li><a href="/assets/cornell-2-21-2022.pdf"><u>Slides</u></a> from the Cornell Probability Seminar. Topic: flux in small-noise dynamical systems.</li>
 </ul>
