--- a/research/index.html
+++ b/research/index.html
@@ -236,6 +236,7 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
 <hr />
 <h2 id="selected-talks">Selected talks:</h2>
 <ul>
+  <li>M. Kvalheim. “<em>Linearizability of dynamical systems by embeddings.</em>” Invited talk, Joint Mathematics Meetings (2024). San Francisco, CA, USA. (<a href="/assets/jmm-slides.pdf"><u>slides</u></a>)</li>
   <li>M. Kvalheim. “<em>Discovering engineering (im)possibilities with geometry and topology.</em>” Invited talk, <a href="https://www.grasp.upenn.edu/events/fall-2023-grasp-sfi-matthew-kvalheim/"><u>University of Pennsylvania GRASP SFI Seminar</u></a> (2023). Philadelphia, PA, USA. (<a href="https://www.youtube.com/watch?v=Zkbcx8YS07g"><u>video</u></a>, <a href="/assets/kvalheim-grasp-sfi-2023-handout.pdf"><u>slides</u></a>)</li>
   <li>M. Kvalheim. “<em>Asymptotic stabilizability.</em>” Invited talk, <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139"><u>BIRS workshop Geometry, Topology and Control System Design</u></a> (2023). Banff, AB, Canada. (<a href="/assets/banff-2023.pdf"><u>slides</u></a>)</li>
   <li>M. Kvalheim. “<em>Existence and uniqueness of Koopman eigenfunctions near stable equilibria and limit cycles.</em>” Invited talk, International Symposium on Nonlinear Theory and Its Applications (NOLTA 2022). Online. (<a href="/assets/NOLTA2022.pdf"><u>slides</u></a>)</li>
