--- a/teaching/index.html
+++ b/teaching/index.html
@@ -82,6 +82,10 @@
 
 <ul>
   <li>
+    <p><strong>Ordinary Differential Equations (Math 612)</strong>.
+  UMBC, Spring 2024</p>
+  </li>
+  <li>
     <p><strong>Introduction to Linear Algebra (Math 221)</strong>.<br />
   UMBC, Fall 2023 (<a href="/assets/syllabus-fall-2023.html"><u>Syllabus</u></a>)</p>
   </li>
