--- a/research/index.html
+++ b/research/index.html
@@ -80,9 +80,9 @@
 
 <hr />
 
-<p>My research interests include nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.</p>
+<p>My primary research interests are in dynamical systems and control theory.<!--, from a geometric-topological point of view.--><!--, with a focus on asymptotic stability and feedback stabilization.--></p>
 
-<p>Specific topics related to my work: feedback stabilization, Koopman operator theory, data-driven algorithms, closed one-forms in dynamics, Morse/Conley theory, stochastic processes and topology, invariant manifolds, bifurcations, differential flatness, geometric mechanics, and hybrid systems.</p>
+<!--These interests have intersected with the following topics in my work: feedback stabilization, Koopman operator theory, data-driven algorithms, closed one-forms in dynamics, Morse/Conley theory, stochastic processes and topology, invariant manifolds, bifurcations, differential flatness, geometric mechanics, hybrid systems, and autoencoders.-->
 
 <hr />
 <h2 id="published-or-accepted-journal-papers">Published or accepted journal papers:</h2>
