--- a/research/index.html
+++ b/research/index.html
@@ -80,7 +80,7 @@
 
 <hr />
 
-<p>My research interests are in applied mathematics, dynamical systems, and control theory.<!--, from a geometric-topological point of view.--><!--, with a focus on asymptotic stability and feedback stabilization.--></p>
+<p>My research interests are in Dynamical Systems, Control Theory, and Applied Topology and Geometry.<!--, from a geometric-topological point of view.--><!--, with a focus on asymptotic stability and feedback stabilization.--></p>
 
 <!--These interests have intersected with the following topics in my work: feedback stabilization, Koopman operator theory, data-driven algorithms, closed one-forms in dynamics, Morse/Conley theory, stochastic processes and topology, invariant manifolds, bifurcations, differential flatness, geometric mechanics, hybrid systems, and autoencoders.-->
 
