--- a/research/index.html
+++ b/research/index.html
@@ -88,6 +88,11 @@
 <h2 id="published-or-accepted-journal-papers">Published or accepted journal papers:</h2>
 <ul>
   <li>
+    <p><strong>Why should autoencoders work?</strong>.<br />
+  Matthew D. Kvalheim and Eduardo D. Sontag.<br />
+  Transactions on Machine Learning Research, Accepted (2024). (<a href="https://arxiv.org/abs/2310.02250"><u>arXiv</u></a>)</p>
+  </li>
+  <li>
     <p><strong>A compositional approach to certifying the almost global asymptotic stability of cascade systems</strong>.<br />
   Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
   IEEE Control Systems Letters, 7 (2023), pp. 1969-1974. (<a href="https://doi.org/10.1109/LCSYS.2023.3284338"><u>article</u></a>, <a href="https://arxiv.org/abs/2303.15535"><u>arXiv</u></a>)</p>
@@ -190,11 +195,6 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
     <p><strong>Relationships between necessary conditions for feedback stabilizability</strong>.<br />
   Matthew D. Kvalheim.<br />
   (2023). (<a href="https://arxiv.org/abs/2312.16752"><u>arXiv</u></a>)</p>
-  </li>
-  <li>
-    <p><strong>Why do autoencoders work?</strong>.<br />
-  Matthew D. Kvalheim and Eduardo D. Sontag.<br />
-  (2023). (<a href="https://arxiv.org/abs/2310.02250"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Koopman embedding and super-linearization counterexamples with isolated equilibria</strong>.<br />
