--- a/research/index.html
+++ b/research/index.html
@@ -90,12 +90,12 @@
   <li>
     <p><strong>Why should autoencoders work?</strong>.<br />
   Matthew D. Kvalheim and Eduardo D. Sontag.<br />
-  Transactions on Machine Learning Research, Accepted (2024). (<a href="https://openreview.net/pdf?id=uGVFtjvI3v"><u>article</u></a>, <a href="https://arxiv.org/abs/2310.02250"><u>arXiv</u></a>)</p>
+  Transactions on Machine Learning Research, pp. 1–24 (2024). (<a href="https://openreview.net/pdf?id=uGVFtjvI3v"><u>article</u></a>, <a href="https://arxiv.org/abs/2310.02250"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>A compositional approach to certifying the almost global asymptotic stability of cascade systems</strong>.<br />
   Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
-  IEEE Control Systems Letters, 7 (2023), pp. 1969-1974. (<a href="https://doi.org/10.1109/LCSYS.2023.3284338"><u>article</u></a>, <a href="https://arxiv.org/abs/2303.15535"><u>arXiv</u></a>)</p>
+  IEEE Control Systems Letters, 7 (2023), pp. 1969–1974. (<a href="https://doi.org/10.1109/LCSYS.2023.3284338"><u>article</u></a>, <a href="https://arxiv.org/abs/2303.15535"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
