--- a/research/index.html
+++ b/research/index.html
@@ -90,7 +90,7 @@
   <li>
     <p><strong>Why should autoencoders work?</strong>.<br />
   Matthew D. Kvalheim and Eduardo D. Sontag.<br />
-  Transactions on Machine Learning Research, pp. 1–24 (2024). (<a href="https://openreview.net/pdf?id=uGVFtjvI3v"><u>article</u></a>, <a href="https://arxiv.org/abs/2310.02250"><u>arXiv</u></a>)</p>
+  Transactions on Machine Learning Research (2024), pp. 1–24. (<a href="https://openreview.net/pdf?id=uGVFtjvI3v"><u>article</u></a>, <a href="https://arxiv.org/abs/2310.02250"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>A compositional approach to certifying the almost global asymptotic stability of cascade systems</strong>.<br />
