u; hello from first Mac Desktop commit

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -82,7 +82,11 @@
 
 <ul>
   <li>
-    <p><strong>Ordinary Differential Equations (Math 612)</strong>.
+    <p><strong>Real Analysis (Math 600)</strong>.<br />
+  UMBC, Fall 2024</p>
+  </li>
+  <li>
+    <p><strong>Ordinary Differential Equations (Math 612)</strong>.<br />
   UMBC, Spring 2024</p>
   </li>
   <li>
