--- a/research/index.html
+++ b/research/index.html
@@ -88,6 +88,11 @@
 <h2 id="published-or-accepted-journal-papers">Published or accepted journal papers:</h2>
 <ul>
   <li>
+    <p><strong>Phase response curves and the role of coordinates</strong>.<br />
+ Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.<br />
+ (2024). Biological Cybernetics, Accepted (2024). (<a href="https://arxiv.org/abs/2111.06511"><u>arXiv</u></a>)</p>
+  </li>
+  <li>
     <p><strong>Why should autoencoders work?</strong>.<br />
   Matthew D. Kvalheim and Eduardo D. Sontag.<br />
   Transactions on Machine Learning Research (2024), pp. 1–24. (<a href="https://openreview.net/pdf?id=uGVFtjvI3v"><u>article</u></a>, <a href="https://arxiv.org/abs/2310.02250"><u>arXiv</u></a>)</p>
@@ -210,11 +215,6 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
     <p><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
   Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
   (2022). (<a href="https://arxiv.org/abs/2203.04498"><u>arXiv</u></a>)</p>
-  </li>
-  <li>
-    <p><strong>Phase response curves and the role of coordinates</strong>.<br />
- Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.<br />
- (2021). (<a href="https://arxiv.org/abs/2111.06511"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>A pasting lemma for Lipschitz functions</strong>.<br />
