--- a/research/index.html
+++ b/research/index.html
@@ -90,7 +90,7 @@
   <li>
     <p><strong>Phase response curves and the role of coordinates</strong>.<br />
  Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.<br />
- (2024). Biological Cybernetics, Accepted (2024). ([<u>article</u>][43], <a href="https://arxiv.org/abs/2111.06511"><u>arXiv</u></a>)</p>
+ (2024). Biological Cybernetics, Accepted (2024). (<a href="https://doi.org/10.1007/s00422-024-00997-w"><u>article</u></a>, <a href="https://arxiv.org/abs/2111.06511"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Why should autoencoders work?</strong>.<br />
