--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 
 <hr />
 
-<h2 id="some-recent-presentation-materials">Some recent presentation materials:</h2>
-<ul>
-  <li><a href="/assets/u-delaware-slides.pdf"><u>Slides</u></a> from a talk at the University of Delaware. Topic: identifying engineering (im)possibilities with geometry and topology.</li>
-  <li><a href="/assets/cornell-2-21-2022.pdf"><u>Slides</u></a> from the Cornell Probability Seminar. Topic: flux in small-noise dynamical systems.</li>
-</ul>
+<!--
+## Some recent presentation materials:
+* [<u>Slides</u>](/assets/u-delaware-slides.pdf) from a talk at the University of Delaware. Topic: identifying engineering (im)possibilities with geometry and topology. 
+* [<u>Slides</u>](/assets/cornell-2-21-2022.pdf) from the Cornell Probability Seminar. Topic: flux in small-noise dynamical systems. 
+-->
 
 
 </article>
