--- a/research/index.html
+++ b/research/index.html
@@ -234,17 +234,18 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
 <p><strong>Aspects of invariant manifold theory and applications</strong>, 207 pages, December 2018. (<a href="https://deepblue.lib.umich.edu/handle/2027.42/147642"><u>link</u></a>)</p>
 
 <hr />
+
 <h2 id="selected-talks">Selected talks:</h2>
 <ul>
-  <li>M. D. Kvalheim. “<em>Linearizability of dynamical systems by embeddings.</em>” Invited talk, Joint Mathematics Meetings (2024). San Francisco, CA, USA. (<a href="/assets/jmm-slides.pdf"><u>slides</u></a>)</li>
-  <li>M. D. Kvalheim. “<em>Discovering engineering (im)possibilities with geometry and topology.</em>” Invited talk, <a href="https://www.grasp.upenn.edu/events/fall-2023-grasp-sfi-matthew-kvalheim/"><u>University of Pennsylvania GRASP SFI Seminar</u></a> (2023). Philadelphia, PA, USA. (<a href="https://www.youtube.com/watch?v=Zkbcx8YS07g"><u>video</u></a>, <a href="/assets/kvalheim-grasp-sfi-2023-handout.pdf"><u>slides</u></a>)</li>
-  <li>M. D. Kvalheim. “<em>Asymptotic stabilizability.</em>” Invited talk, <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139"><u>BIRS workshop Geometry, Topology and Control System Design</u></a> (2023). Banff, AB, Canada. (<a href="/assets/banff-2023.pdf"><u>slides</u></a>)</li>
-  <li>M. D. Kvalheim. “<em>Existence and uniqueness of Koopman eigenfunctions near stable equilibria and limit cycles.</em>” Invited talk, International Symposium on Nonlinear Theory and Its Applications (NOLTA 2022). Online. (<a href="/assets/NOLTA2022.pdf"><u>slides</u></a>)</li>
+  <li>M. D. Kvalheim. “<em>Linearizability of dynamical systems by embeddings.</em>” Invited talk, Joint Mathematics Meetings (2024). San Francisco, CA, USA. <!--([<u>slides</u>](/assets/jmm-slides.pdf))--></li>
+  <li>M. D. Kvalheim. “<em>Discovering engineering (im)possibilities with geometry and topology.</em>” Invited talk, <a href="https://www.grasp.upenn.edu/events/fall-2023-grasp-sfi-matthew-kvalheim/"><u>University of Pennsylvania GRASP SFI Seminar</u></a> (2023). Philadelphia, PA, USA. <!--([<u>video</u>][40], [<u>slides</u>](/assets/kvalheim-grasp-sfi-2023-handout.pdf))--></li>
+  <li>M. D. Kvalheim. “<em>Asymptotic stabilizability.</em>” Invited talk, <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139"><u>BIRS workshop Geometry, Topology and Control System Design</u></a> (2023). Banff, AB, Canada. <!--([<u>slides</u>](/assets/banff-2023.pdf))--></li>
+  <li>M. D. Kvalheim. “<em>Existence and uniqueness of Koopman eigenfunctions near stable equilibria and limit cycles.</em>” Invited talk, International Symposium on Nonlinear Theory and Its Applications (NOLTA 2022). Online. <!--([<u>slides</u>](/assets/NOLTA2022.pdf))--></li>
   <li>M. D. Kvalheim. “<em>Large deviations, persistent homology, and Brownian conductors with negative resistance.</em>” Invited talk, Cornell University Probability Seminar (2022). Online.</li>
   <li>M. D. Kvalheim. “<em>When can hybrid systems operate safely?</em>” Invited talk, University of Michigan Control Seminar (2022). Online.</li>
   <li>M. D. Kvalheim. “<em>Flux in small noise dynamics: persistence and negative resistance.</em>” Invited talk, Brown University, Division of Applied Mathematics (2022). Online.</li>
   <li>S. Burden and M. D. Kvalheim. “<em>When and how are hybrid dynamical systems conjugate to their classical quotients?</em>” Invited talk, SIAM Conference on Control and its Applications (2021). Online.</li>
-  <li>M. D. Kvalheim. “<em>Towards a Conley theory for hybrid dynamical systems.</em>” Invited talk, Rutgers TRIPODS/DATA-INSPIRE Workshop on Dynamics, Topology, and Robotic Control (2021). Online. (<a href="https://www.youtube.com/watch?v=DEQcCCea_rA&amp;t=3644s&amp;ab_channel=DIMACSCCICADA"><u>video</u></a>)</li>
+  <li>M. D. Kvalheim. “<em>Towards a Conley theory for hybrid dynamical systems.</em>” Invited talk, Rutgers TRIPODS/DATA-INSPIRE Workshop on Dynamics, Topology, and Robotic Control (2021). Online. <!--([<u>video</u>][39])--></li>
   <li>M. D. Kvalheim. “<em>Hierarchical Composition via Collapse of Dimension in Dynamical Systems.</em>” Invited talk, ETH Zürich Autonomy Talks (2021). Online.</li>
   <li>A. M. Bloch and M. D. Kvalheim. “<em>Geometry and dynamics of circulant systems.</em>” Invited talk, AMS sectional meeting, special session on Geometric Dynamics (2020). Online.</li>
   <li>M. D. Kvalheim, P. Gustafson, D. Koditschek. “<em>Toward a task planning theory for robot hybrid dynamics.</em>” Invited talk, BIRS-CMO workshop on Topological Complexity and Motion Planning (2020). Online.</li>
