--- a/research/index.html
+++ b/research/index.html
@@ -80,27 +80,23 @@
 
 <hr />
 
-<p>My research interests are in Dynamical Systems, Control Theory, and Applied Topology and Geometry.<!--, from a geometric-topological point of view.--><!--, with a focus on asymptotic stability and feedback stabilization.--></p>
+<p>Current research interests: dynamical systems, control theory, and applied topology and geometry.<!--, from a geometric-topological point of view.--><!--, with a focus on asymptotic stability and feedback stabilization.--></p>
 
 <!--These interests have intersected with the following topics in my work: feedback stabilization, Koopman operator theory, data-driven algorithms, closed one-forms in dynamics, Morse/Conley theory, stochastic processes and topology, invariant manifolds, bifurcations, differential flatness, geometric mechanics, hybrid systems, and autoencoders.-->
 
 <hr />
 <h2 id="published-or-accepted-journal-papers">Published or accepted journal papers:</h2>
+
 <ul>
-  <li>
-    <p><strong>Phase response curves and the role of coordinates</strong>.<br />
- Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.<br />
- (2024). Biological Cybernetics, Accepted (2024). (<a href="https://doi.org/10.1007/s00422-024-00997-w"><u>article</u></a>, <a href="https://arxiv.org/abs/2111.06511"><u>arXiv</u></a>)</p>
-  </li>
   <li>
     <p><strong>Why should autoencoders work?</strong>.<br />
   Matthew D. Kvalheim and Eduardo D. Sontag.<br />
   Transactions on Machine Learning Research (2024), pp. 1–24. (<a href="https://openreview.net/pdf?id=uGVFtjvI3v"><u>article</u></a>, <a href="https://arxiv.org/abs/2310.02250"><u>arXiv</u></a>)</p>
   </li>
   <li>
-    <p><strong>A compositional approach to certifying the almost global asymptotic stability of cascade systems</strong>.<br />
-  Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
-  IEEE Control Systems Letters, 7 (2023), pp. 1969–1974. (<a href="https://doi.org/10.1109/LCSYS.2023.3284338"><u>article</u></a>, <a href="https://arxiv.org/abs/2303.15535"><u>arXiv</u></a>)</p>
+    <p><strong>Phase response curves and the role of coordinates</strong>.<br />
+ Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.<br />
+ (2024). Biological Cybernetics, 118 (2024), pp.~311–330. (<a href="https://doi.org/10.1007/s00422-024-00997-w"><u>article</u></a>, <a href="https://arxiv.org/abs/2111.06511"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
@@ -113,14 +109,14 @@
   SIAM Journal on Control and Optimization, 61.2 (2023), pp. 536–542. (<a href="https://doi.org/10.1137/22M1500113"><u>article</u></a>, <a href="https://arxiv.org/abs/2205.07840"><u>arXiv</u></a>)</p>
   </li>
   <li>
+    <p><strong>A compositional approach to certifying the almost global asymptotic stability of cascade systems</strong>.<br />
+  Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
+  IEEE Control Systems Letters, 7 (2023), pp. 1969–1974. (<a href="https://doi.org/10.1109/LCSYS.2023.3284338"><u>article</u></a>, <a href="https://arxiv.org/abs/2303.15535"><u>arXiv</u></a>)</p>
+  </li>
+  <li>
     <p><strong>A generalization of the Hopf degree theorem</strong>.<br />
   Matthew D. Kvalheim.<br />
   Proceedings of the American Mathematical Society, 151.1 (2023), pp. 453–454. (<a href="https://doi.org/10.1090/proc/16218"><u>article</u></a>, <a href="https://arxiv.org/abs/2203.10371"><u>arXiv</u></a>)</p>
-  </li>
-  <li>
-    <p><strong>Planning of obstacle-aided navigation for multi-legged robots using a sampling-based method over directed graphs</strong>.<br />
- Kaustav Chakraborty, Haodi Hu, Matthew D. Kvalheim, and Feifei Qian.<br />
- IEEE Robotics and Automation Letters, 7.4 (2022), pp. 8861-8868. (<a href="https://ieeexplore.ieee.org/document/9812503"><u>article</u></a>)</p>
   </li>
   <li>
     <p><strong>Necessary conditions for feedback stabilization and safety</strong>.<br />
@@ -128,14 +124,19 @@
  Journal of Geometric Mechanics, 14.4 (2022), pp. 659-693. (<a href="https://www.aimsciences.org/article/doi/10.3934/jgm.2022013"><u>article</u></a>, <a href="https://arxiv.org/abs/2106.00215"><u>arXiv</u></a>)</p>
   </li>
   <li>
-    <p><strong>Existence and uniqueness of global Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.<br />
- Matthew D. Kvalheim and Shai Revzen.<br />
- Physica D, 425 (2021), pp. 132959. (<a href="https://www.sciencedirect.com/science/article/pii/S0167278921001160"><u>article</u></a>, <a href="https://arxiv.org/abs/1911.11996"><u>arXiv</u></a>)</p>
+    <p><strong>Planning of obstacle-aided navigation for multi-legged robots using a sampling-based method over directed graphs</strong>.<br />
+ Kaustav Chakraborty, Haodi Hu, Matthew D. Kvalheim, and Feifei Qian.<br />
+ IEEE Robotics and Automation Letters, 7.4 (2022), pp. 8861-8868. (<a href="https://ieeexplore.ieee.org/document/9812503"><u>article</u></a>)</p>
   </li>
   <li>
     <p><strong>Families of periodic orbits: closed 1-forms and global continuability</strong>.<br />
  Matthew D. Kvalheim and Anthony M. Bloch.<br />
  Journal of Differential Equations, 285 (2021), pp. 211-257. (<a href="https://www.sciencedirect.com/science/article/abs/pii/S0022039621001601"><u>article</u></a>, <a href="https://arxiv.org/abs/1906.03528"><u>arXiv</u></a>)</p>
+  </li>
+  <li>
+    <p><strong>Existence and uniqueness of global Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.<br />
+ Matthew D. Kvalheim and Shai Revzen.<br />
+ Physica D, 425 (2021), pp. 132959. (<a href="https://www.sciencedirect.com/science/article/pii/S0167278921001160"><u>article</u></a>, <a href="https://arxiv.org/abs/1911.11996"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Conley’s fundamental theorem for a class of hybrid systems</strong>.<br />
