--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <p>My <a href="https://mdkvalheim.github.io/research/"><u>research</u></a> and <a href="https://mdkvalheim.github.io/teaching/"><u>teaching</u></a> pages contain more information.</p>
 
 <hr />
-<p>I am grateful for the support of the Air Force Office of Scientific Research under award number FA9550-24-1-0299.</p>
+<p>I am grateful for the support of the Air Force Office of Scientific Research. <!--under award number FA9550-24-1-0299.--></p>
 
 <hr />
 
