--- a/research/index.html
+++ b/research/index.html
@@ -198,6 +198,11 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
 <h2 id="papers-under-review-and-selected-other-preprints">Papers under review and selected other preprints:</h2>
 <ul>
   <li>
+    <p><strong>Differential topology of the spaces of asymptotically stable vector fields and Lyapunov functions</strong>.<br />
+  Matthew D. Kvalheim.<br />
+  (2025). (<a href="https://arxiv.org/abs/2503.10828"><u>arXiv</u></a>)</p>
+  </li>
+  <li>
     <p><strong>Global linearization without hyperbolicity</strong>.<br />
   Matthew D. Kvalheim and Eduardo D. Sontag.<br />
   (2025). (<a href="https://arxiv.org/abs/2502.07708"><u>arXiv</u></a>)</p>
