--- a/research/index.html
+++ b/research/index.html
@@ -80,7 +80,7 @@
 
 <hr />
 
-<p>Current research interests: dynamical systems, control theory, differential topology, and applications.<!--, from a geometric-topological point of view.--><!--, with a focus on asymptotic stability and feedback stabilization.--></p>
+<p>Research interests: dynamical systems, control theory, differential topology, and applications.<!--, from a geometric-topological point of view.--><!--, with a focus on asymptotic stability and feedback stabilization.--></p>
 
 <!--These interests have intersected with the following topics in my work: feedback stabilization, Koopman operator theory, data-driven algorithms, closed one-forms in dynamics, Morse/Conley theory, stochastic processes and topology, invariant manifolds, bifurcations, differential flatness, geometric mechanics, hybrid systems, and autoencoders.-->
 
