--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
 
 <hr />
 
-<p>My <a href="https://mdkvalheim.github.io/research/"><u>research</u></a> and <a href="https://mdkvalheim.github.io/teaching/"><u>teaching</u></a> pages contain more information.</p>
+<!-- My [<u>research</u>](https://mdkvalheim.github.io/research/) and [<u>teaching</u>](https://mdkvalheim.github.io/teaching/) pages contain more information.
+-->
+
+<p>My <a href="https://mdkvalheim.github.io/research/"><u>research</u></a> page contains more information.</p>
 
 <hr />
 <p>I am grateful for the support of the Air Force Office of Scientific Research. <!--under award number FA9550-24-1-0299.--></p>
