--- a/index.html
+++ b/index.html
@@ -98,8 +98,12 @@
 
 <hr />
 
+<h2 id="some-recent-presentation-materials">Some recent presentation materials:</h2>
+<ul>
+  <li><a href="/assets/siam-ds-2025-slides-linearizability.pdf"><u>Slides</u></a> from a talk at SIAM DS 2025 on “When do Koopman embeddings exist?”</li>
+</ul>
+
 <!--
-## Some recent presentation materials:
 * [<u>Slides</u>](/assets/u-delaware-slides.pdf) from a talk at the University of Delaware. Topic: identifying engineering (im)possibilities with geometry and topology. 
 * [<u>Slides</u>](/assets/cornell-2-21-2022.pdf) from the Cornell Probability Seminar. Topic: flux in small-noise dynamical systems. 
 -->
