--- a/research/index.html
+++ b/research/index.html
@@ -200,7 +200,7 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
   (2025). (<a href="https://arxiv.org/abs/2503.10828"><u>arXiv</u></a>)</p>
   </li>
   <li>
-    <p><strong>Global linearization without hyperbolicity</strong>.<br />
+    <p><strong>Global linearization of asymptotically stable systems without hyperbolicity</strong>.<br />
   Matthew D. Kvalheim and Eduardo D. Sontag.<br />
   (2025). (<a href="https://arxiv.org/abs/2502.07708"><u>arXiv</u></a>)</p>
   </li>
