--- a/research/index.html
+++ b/research/index.html
@@ -86,6 +86,11 @@
 
 <ul>
   <li>
+    <p><strong>Global linearization of asymptotically stable systems without hyperbolicity</strong>.<br />
+ Matthew D. Kvalheim and Eduardo D. Sontag.<br />
+ Systems and Control Letters, Accepted (2025). (<a href="https://arxiv.org/abs/2502.07708"><u>arXiv</u></a>)</p>
+  </li>
+  <li>
     <p><strong>Why should autoencoders work?</strong>.<br />
   Matthew D. Kvalheim and Eduardo D. Sontag.<br />
   Transactions on Machine Learning Research (2024), pp. 1–24. (<a href="https://openreview.net/pdf?id=uGVFtjvI3v"><u>article</u></a>, <a href="https://arxiv.org/abs/2310.02250"><u>arXiv</u></a>)</p>
@@ -198,11 +203,6 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
     <p><strong>Differential topology of the spaces of asymptotically stable vector fields and Lyapunov functions</strong>.<br />
   Matthew D. Kvalheim.<br />
   (2025). (<a href="https://arxiv.org/abs/2503.10828"><u>arXiv</u></a>)</p>
-  </li>
-  <li>
-    <p><strong>Global linearization of asymptotically stable systems without hyperbolicity</strong>.<br />
-  Matthew D. Kvalheim and Eduardo D. Sontag.<br />
-  (2025). (<a href="https://arxiv.org/abs/2502.07708"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Relationships between necessary conditions for feedback stabilizability</strong>.<br />
