--- a/research/index.html
+++ b/research/index.html
@@ -159,7 +159,13 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
 
 <hr />
 <h2 id="published-or-accepted-peer-reviewed-conference-papers">Published or accepted peer-reviewed conference papers:</h2>
+
 <ul>
+  <li>
+    <p><strong>Relationships between necessary conditions for feedback stabilizability</strong>.<br />
+  Matthew D. Kvalheim.<br />
+  Proceedings of the 2023 BIRS Workshop on Geometry, Topology and Control System Design, Accepted (2025)). (<a href="https://arxiv.org/abs/2312.16752"><u>arXiv</u></a>)</p>
+  </li>
   <li>
     <p><strong>The role of symmetry in constructing geometric flat outputs for
   free-flying robotic systems</strong>.<br />
@@ -205,36 +211,28 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
   (2025). (<a href="https://arxiv.org/abs/2503.10828"><u>arXiv</u></a>)</p>
   </li>
   <li>
-    <p><strong>Relationships between necessary conditions for feedback stabilizability</strong>.<br />
-  Matthew D. Kvalheim.<br />
-  (2023). (<a href="https://arxiv.org/abs/2312.16752"><u>arXiv</u></a>)</p>
+    <p><strong>Linearizability of flows by embeddings</strong>.<br />
+  Matthew D. Kvalheim and Philip Arathoon.<br />
+  (2024). (<a href="https://arxiv.org/abs/2305.18288"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Koopman embedding and super-linearization counterexamples with isolated equilibria</strong>.<br />
   Philip Arathoon and Matthew D. Kvalheim.<br />
   (2023). (<a href="https://arxiv.org/abs/2306.15126"><u>arXiv</u></a>)</p>
   </li>
-  <li>
-    <p><strong>Linearizability of flows by embeddings</strong>.<br />
-  Matthew D. Kvalheim and Philip Arathoon.<br />
-  (2023). (<a href="https://arxiv.org/abs/2305.18288"><u>arXiv</u></a>)</p>
-  </li>
-  <li>
-    <p><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
-  Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
-  (2022). (<a href="https://arxiv.org/abs/2203.04498"><u>arXiv</u></a>)</p>
-  </li>
-  <li>
-    <p><strong>A pasting lemma for Lipschitz functions</strong>.<br />
- Matthew D. Kvalheim, Paul Gustafson, and Samuel A. Burden.<br />
- (2021). (<a href="https://arxiv.org/abs/2109.08209"><u>arXiv</u></a>)</p>
-  </li>
-  <li>
-    <p><strong>Poincaré-Hopf theorem for hybrid systems</strong>.<br />
- Matthew D. Kvalheim.<br />
- (2021). (<a href="https://arxiv.org/abs/2108.07434"><u>arXiv</u></a>)</p>
-  </li>
 </ul>
+
+<!--* **Estimating phase from observed trajectories using the temporal 1-form**.  
+    Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.  
+    (2022). ([<u>arXiv</u>][23])  -->
+
+<!--* **Poincaré-Hopf theorem for hybrid systems**.  
+   Matthew D. Kvalheim.  
+   (2021). ([<u>arXiv</u>][19])  -->
+
+<!--* **A pasting lemma for Lipschitz functions**.  
+   Matthew D. Kvalheim, Paul Gustafson, and Samuel A. Burden.  
+   (2021). ([<u>arXiv</u>][20]) -->
 
 <hr />
 <h2 id="phd-thesis">PhD thesis:</h2>
