--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 <hr />
 
-<h2 id="some-recent-presentation-materials">Some recent presentation materials:</h2>
+<h2 id="recent-presentation-materials">Recent presentation materials:</h2>
 <ul>
   <li><a href="/assets/siam-ds-2025-slides-linearizability.pdf"><u>Slides</u></a> and a <a href="/assets/user-guide.pdf"><u>User's Guide to Slides</u></a> from a talk at SIAM DS 2025 on “When do Koopman embeddings exist?”</li>
 </ul>
