--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 
 <h2 id="recent-presentation-materials">Recent presentation materials:</h2>
 <ul>
+  <li><a href="/assets/smale-95.pdf"><u>Slides</u></a> from a talk at [<u>Smale@95: A Conference in Honor of Steve Smale</u>][33] “On Professor Smale’s legacy for asymptotic stability theory.”</li>
   <li><a href="/assets/siam-ds-2025-slides-linearizability.pdf"><u>Slides</u></a> and a <a href="/assets/user-guide.pdf"><u>User's Guide to Slides</u></a> from a talk at SIAM DS 2025 on “When do Koopman embeddings exist?”</li>
 </ul>
 
